objects/PT_Parts_List_Revision__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Parts List Revisions</relationshipLabel>
        <relationshipName>Parts_List_Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Approver_Comments__c</fullName>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PT_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Current_Part_List_Approval_Date__c</fullName>
        <formula>PT_Part_List_Opportunity__r.PT_PL_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Part List Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PT_Current_Part_List_Name__c</fullName>
        <formula>PT_Part_List_Opportunity__r.PT_Part_List_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Part List Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Current_Part_List_Rev_Nbr__c</fullName>
        <formula>TEXT(PT_Part_List_Opportunity__r.PT_Parts_List_Revision_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Part List Rev Nbr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Current_Part_List_Rev_Trans__c</fullName>
        <formula>PT_Part_List_Opportunity__r.PT_Revised_Parts_List_Version_Trans__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Part List Rev Trans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Current_Part_List_Submitter__c</fullName>
        <formula>PT_Part_List_Opportunity__r.PT_PL_Approval_Submitter__r.FirstName  &amp; &#39; &#39; &amp;  PT_Part_List_Opportunity__r.PT_PL_Approval_Submitter__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Part List Submitter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Date_approved__c</fullName>
        <label>Date approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PT_Install_Loc__c</fullName>
        <formula>Asset__r.PT_Install_Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Loc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_Code__c</fullName>
        <formula>Asset__r.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Name__c</fullName>
        <label>Part List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part List Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Parts List Revisions</relationshipLabel>
        <relationshipName>Parts_List_Revisions_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_Part_List_Revision_Number_Text__c</fullName>
        <formula>TEXT(PT_Parts_List_Revision_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part List Revision Number Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Parts_List_Revision_Number__c</fullName>
        <label>Parts List Revision Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PT_Pending_Approved__c</fullName>
        <formula>IF ( ISBLANK(PT_Date_approved__c), &#39;Pending&#39;, &#39;Approved&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending/Approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Pricelist_CreatedDate__c</fullName>
        <formula>PT_Part_List_Opportunity__r.PT_Price_List__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Price List Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PT_Revised_Parts_List_Version_Trans__c</fullName>
        <label>Revised Parts List Version Trans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Shipset__c</fullName>
        <formula>Asset__r.PT_Install_Location__r.ShipSet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Submitter_Comments__c</fullName>
        <label>Submitter Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PT_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PT_Submitter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parts_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XXParts List</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Parts List Revisions</relationshipLabel>
        <relationshipName>Parts_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revised_Action__c</fullName>
        <label>Revised Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Description__c</fullName>
        <label>Revised Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Details__c</fullName>
        <formula>IF (ISBLANK(Revised_Element__c),  
				Revised_Action__c &amp; &#39;, (&#39; &amp;  Revised_Description__c &amp; &#39;)&#39;, 
				Revised_Element__c	&amp; &#39; - &#39; &amp;  Revised_Action__c &amp; &#39;, (&#39; &amp;  Revised_Description__c &amp; &#39;)&#39; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revised Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Element__c</fullName>
        <label>Revised Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Parts List Revision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PT_Part_List_Name__c</columns>
        <columns>PT_Part_List_Opportunity__c</columns>
        <columns>Revised_Description__c</columns>
        <columns>PT_Revised_Parts_List_Version_Trans__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Program_View</fullName>
        <columns>NAME</columns>
        <columns>PT_Part_List_Name__c</columns>
        <columns>Revised_Action__c</columns>
        <columns>PT_Part_List_Opportunity__c</columns>
        <columns>PT_Install_Loc__c</columns>
        <columns>Revised_Element__c</columns>
        <columns>Revised_Description__c</columns>
        <columns>PT_Part_List_Revision_Number_Text__c</columns>
        <columns>PT_Shipset__c</columns>
        <columns>PT_Current_Part_List_Name__c</columns>
        <columns>PT_Current_Part_List_Rev_Nbr__c</columns>
        <columns>PT_Current_Part_List_Rev_Trans__c</columns>
        <filterScope>Everything</filterScope>
        <label>Program View</label>
    </listViews>
    <nameField>
        <displayFormat>PLR-{0000}</displayFormat>
        <label>Parts List Revision Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts List Revisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>